# intear-near-wallet

./: .env.prod
account-creation-service/src/: main.rs
near-min-api/: Cargo.toml
web/src/pages/: connect.rs  sign_message.rs
