[package]
name = "near-min-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
near-crypto = "0.34.1"
bs58 = "0.5"
sha2 = "0.10"
borsh = "1.6"
serde_with = { version = "3.12", features = ["base64"] }
derive_more = { version = "2", features = ["full"] }
easy-ext = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
futures-util = "0.3"
near-account-id = { version = "2", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }
near-gas = { version = "0.3", features = ["serde", "borsh"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
